src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Primary_Win_Reason__c</fullName>
        <description>Why did we win the Sale, what was the strongest deciding factor</description>
        <label>Primary Win Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Win__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Not satisfied w/ current service provider</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>RFP Selection</fullName>
                </value>
                <value>
                    <fullName>School Recommendation</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority_High_Enrollment_School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check this box if this is a top ten enrollment school.</description>
        <inlineHelpText>Please check this box if this is a top ten enrollment school.</inlineHelpText>
        <label>Priority High Enrollment School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Win__c</fullName>
        <description>If the primary win reason is product please select which products were the reason for the win.</description>
        <inlineHelpText>If the primary win reason is product please select which products were the reason for the win.</inlineHelpText>
        <label>Product-Win</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Primary_Win_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Literacy</fullName>
                </value>
                <value>
                    <fullName>Debt Management</fullName>
                </value>
                <value>
                    <fullName>SALT Membership</fullName>
                </value>
                <value>
                    <fullName>Staff Trainings</fullName>
                </value>
                <value>
                    <fullName>Engagement/Activation Support</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>If the primary loss reason is product please select which products were the reason for the loss.</description>
        <inlineHelpText>If the primary loss reason is product please select which products were the reason for the loss.</inlineHelpText>
        <label>Product-Loss</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Primary_Loss_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Debt Management</fullName>
                </value>
                <value>
                    <fullName>Engagement/Activation Support</fullName>
                </value>
                <value>
                    <fullName>Financial Literacy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SALT Membership</fullName>
                </value>
                <value>
                    <fullName>Staff Trainings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_Services__c</fullName>
        <label>Deprecated Products &amp; Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Education/My Money 101</fullName>
                </value>
                <value>
                    <fullName>Education Debt Management</fullName>
                </value>
                <value>
                    <fullName>Consultation</fullName>
                </value>
                <value>
                    <fullName>Train-the-trainer</fullName>
                </value>
                <value>
                    <fullName>In-person Student Training</fullName>
                </value>
                <value>
                    <fullName>Webinar Student Training</fullName>
                </value>
                <value>
                    <fullName>In-person Staff Training</fullName>
                </value>
                <value>
                    <fullName>Webinar Staff Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_Approval_Date__c</fullName>
        <label>Deprecated Proposal Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Circulated_to_Sr_Staff__c</fullName>
        <label>Proposal Circulated to Sr. Staff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Delivered_to_BD__c</fullName>
        <label>Deprecated Proposal Delivered to BD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Draft_Date__c</fullName>
        <label>Deprecated Proposal Draft Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Returned_from_BD__c</fullName>
        <label>Proposal Decision Returned from BD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proprietary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proprietary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_to_Create_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready to Create Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_ID_formula__c</fullName>
        <formula>IF(RecordTypeId = &quot;0126000000010rU&quot;, &quot;012600000009YRY&quot;, 
IF(RecordTypeId = &quot;012600000000vSx&quot;, &quot;012J0000000DAQK&quot;, 
IF(RecordTypeId = &quot;012J0000000D9yG&quot;, &quot;012J0000000DAQK&quot;, 
IF(RecordTypeId = &quot;01260000000165R&quot; &amp;&amp; ISPICKVAL(Type,&apos;Sponsor&apos;), &quot;012600000009YRY&quot;, 
IF(RecordTypeId = &quot;01260000000165R&quot; &amp;&amp; ISPICKVAL(Type,&apos;Engagement Partner&apos;), &quot;012600000009YRY&quot;, 
IF(RecordTypeId = &quot;01260000000165R&quot; &amp;&amp; ISPICKVAL(Type,&apos;Grant&apos;), &quot;012J0000000DAQK&quot;,null))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type ID formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_by__c</fullName>
        <label>Referred by</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this is a Renewal Opportunity.</inlineHelpText>
        <label>Renewal Opp?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>School CM</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rollover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rollover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Loss_Reason__c</fullName>
        <label>Deprecated_Secondary Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Cycle/Lack of Funds</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Currently under contract</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>In house solution</fullName>
                </value>
                <value>
                    <fullName>Interested, but not ready yet</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>RFP Selection</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Win_Reason__c</fullName>
        <label>Deprecated_Secondary Win Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Not satisfied w/ current service provider</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>RFP Selection</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>School Recommendation</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsorship_Meeting__c</fullName>
        <label>Sponsorship Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StageName_Changed_Date__c</fullName>
        <label>StageName Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_Changed_Date__c</fullName>
        <label>Stage Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Eligible_Members__c</fullName>
        <formula>(Total_in_Enrollment__c  +  (Total_in_Repayment__c*3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Eligible Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Est_Membership__c</fullName>
        <label>Total Estimated Membership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Invoices__c</fullName>
        <formula>IF (ISPICKVAL(Invoice_Frequency__c,&quot;Monthly&quot;),VALUE(TEXT(Contract_Years__c))*12,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;Semi-Annually&quot;),VALUE(TEXT(Contract_Years__c))*2,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;Annually&quot;),VALUE(TEXT(Contract_Years__c))*1,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;Quarterly&quot;),VALUE(TEXT(Contract_Years__c))*4,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;2 Year (Single Payment)&quot;),VALUE(TEXT(Contract_Years__c))*0+1,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;3 Year (Single Payment)&quot;),VALUE(TEXT(Contract_Years__c))*0+1,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;1 Time&quot;),VALUE(TEXT(Contract_Years__c))*0+1,0)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total # Invoices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_in_Enrollment__c</fullName>
        <inlineHelpText>Complete this field if the number estimated to receive Education Debt Management is different from the Total # in Enrollment.</inlineHelpText>
        <label>Total # in Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_in_Repayment__c</fullName>
        <inlineHelpText>Complete this field if the number estimated to receive Education Debt Management is different from the Total # in Repayment.</inlineHelpText>
        <label>Total # in Repayment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trigger_Time_05__c</fullName>
        <formula>(NOW() -  0.038)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trigger Time 05</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type_of_School__c</fullName>
        <formula>TEXT(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Opp__c</fullName>
        <label>Unique Opp</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_is_campus_budget_set__c</fullName>
        <description>If the loss reason = budget cycle/lack of funds is selected this field needs to be completed.</description>
        <inlineHelpText>If the loss reason = budget cycle/lack of funds is selected this field needs to be completed.</inlineHelpText>
        <label>When is campus budget set?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Primary_Loss_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sept</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Win_Loss_Analysis__c</fullName>
        <label>Win/Loss Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Win__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the opportunity is won check this box then go onto fill out win reasons</description>
        <inlineHelpText>Don&apos;t forget to complete the primary and secondary win reasons.</inlineHelpText>
        <label>Win</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Winning_Competitor__c</fullName>
        <description>If the primary loss reason is competitor please choice who the winning competitor is.</description>
        <inlineHelpText>If the primary loss reason is competitor please choice who the winning competitor is.</inlineHelpText>
        <label>Winning Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Primary_Loss_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ACS</fullName>
                </value>
                <value>
                    <fullName>AES</fullName>
                </value>
                <value>
                    <fullName>AlaQuest International, Inc.</fullName>
                </value>
                <value>
                    <fullName>Champion College Solutions</fullName>
                </value>
                <value>
                    <fullName>CSLF (CT)</fullName>
                </value>
                <value>
                    <fullName>Dave Ramsey</fullName>
                </value>
                <value>
                    <fullName>Decision Partners, Inc.</fullName>
                </value>
                <value>
                    <fullName>ECMC</fullName>
                </value>
                <value>
                    <fullName>Ed America</fullName>
                </value>
                <value>
                    <fullName>Ed Financial Services</fullName>
                </value>
                <value>
                    <fullName>EdFund</fullName>
                </value>
                <value>
                    <fullName>EverFi</fullName>
                </value>
                <value>
                    <fullName>FAME</fullName>
                </value>
                <value>
                    <fullName>FAME, Inc (FL)</fullName>
                </value>
                <value>
                    <fullName>Financial Aid TV</fullName>
                </value>
                <value>
                    <fullName>Financial Footprint</fullName>
                </value>
                <value>
                    <fullName>General Revenue Corp/Sallie Mae</fullName>
                </value>
                <value>
                    <fullName>GL Advisors</fullName>
                </value>
                <value>
                    <fullName>Grad Ready</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Greenwood &amp; Hall</fullName>
                </value>
                <value>
                    <fullName>Guarantec</fullName>
                </value>
                <value>
                    <fullName>HigherOne</fullName>
                </value>
                <value>
                    <fullName>Horizon Educational Resources, Inc.</fullName>
                </value>
                <value>
                    <fullName>i3 Group, LLC</fullName>
                </value>
                <value>
                    <fullName>iGrad</fullName>
                </value>
                <value>
                    <fullName>Imagine America Foundation</fullName>
                </value>
                <value>
                    <fullName>Inceptia (NSLP)</fullName>
                </value>
                <value>
                    <fullName>KHEAA (Kentucky)</fullName>
                </value>
                <value>
                    <fullName>Loanwise, LLC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X60_days_No_Activity_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>60 days No Activity Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X90_days_No_Activity_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>90 days No Activity Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT TO PACKAGE. Only for unit test</description>
        <label>XXX Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT TO PACKAGE. Only for unit test</description>
        <label>XXX Batch Process</label>
        <referenceTo>ffr__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_days_stalled__c</fullName>
        <description># of days without activity on this opportunity</description>
        <formula>IF(LastActivityDate &gt; DATEVALUE(LastModifiedDate), today() - LastActivityDate, today() - DATEVALUE(LastModifiedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># of days without activity on this opportunity</inlineHelpText>
        <label># of days stalled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Alan_Ishida_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Ishida</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>2017</value>
        </filters>
        <label>Alan Ishida Opps</label>
    </listViews>
    <listViews>
        <fullName>Chris_E_s_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Elam</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>2017</value>
        </filters>
        <label>Chris Elam&apos;s Opps</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>FY17_Opps_in_Prop_or_Contract_Stage</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>17</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Business_Development</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Proposal,Contract</value>
        </filters>
        <label>FY17 Opps in Prop or Contract Stage</label>
    </listViews>
    <listViews>
        <fullName>FY_17_SC_Opps_Contract</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Stage_Changed_Date__c</columns>
        <columns>Renewal_Opp__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>Total_in_Enrollment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Business_Development</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <label>FY 17 School Channel Opps: CONTRACT</label>
        <sharedTo>
            <group>Revamp_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyClosedOpportunties</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Win_Loss_Analysis__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Closed Opportunties</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>My_OPEN_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Pricing_Concerns__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Prospect,Discovery,Proposal,Contract,Verbal Committment</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Business_Development</value>
        </filters>
        <label>My OPEN Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_State__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>Total_in_Enrollment__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>No_Year_Opty</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>notEqual</operation>
            <value>dteam</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>16</value>
        </filters>
        <filters>
            <field>Rollover__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Optys Not Rolledover</label>
    </listViews>
    <listViews>
        <fullName>Opps_Closing_Next_Month</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Renewal_Opp__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Opps Closing Next Month</label>
        <sharedTo>
            <role>BD_Senior_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Opps_Closing_This_Month</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Renewal_Opp__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Opps Closing This Month</label>
        <sharedTo>
            <role>BD_Senior_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Renewal_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Renewal_Opp__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Renewal Opps</label>
    </listViews>
    <listViews>
        <fullName>Renewals</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>renewal</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>2014,2015</value>
        </filters>
        <label>Renewals</label>
    </listViews>
    <listViews>
        <fullName>Still_Open_prior_to_FY_16</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed - Won,Closed - Lost,In Production,Contract Expired/Terminated</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessThan</operation>
            <value>7/1/2017</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Business_Development</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Scalise</value>
        </filters>
        <label>Still Open prior to FY&apos;17 - Vince</label>
        <sharedTo>
            <group>BD_Management</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>BizDev</fullName>
        <active>false</active>
        <businessProcess>School Strategy</businessProcess>
        <description>School Client Opportunity</description>
        <label>Biz Dev</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Development</fullName>
        <active>true</active>
        <businessProcess>New Contract Process</businessProcess>
        <description>New Business Opportunities</description>
        <label>Business Development</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foundation</fullName>
        <active>true</active>
        <businessProcess>Foundation</businessProcess>
        <label>Foundation</label>
    </recordTypes>
</CustomObject>